# ordinator-api

./: .env  .env.example  .env.prod  .envrc  .gitignore  .ignore  .tmux.conf  .~lock.old-dan-f-from-brian.xlsx#  Cargo.toml  Dockerfile  Dockerfile.dev  Dockerfile.prod  E_Status  I_Status  LICENSE  README.md  SHARED_TYPES_CARGO_DEPENDENCIES_TEMP.toml  default.nix  docker-compose.override.yml  docker-compose.yml  flake.nix  history.txt  justfile  ordinator-laptop.kdl  ordinator.kdl  output.json  rfc9110  rustc-ice-2025-05-26T10_23_06-314173.txt  rustc-ice-2025-05-26T10_23_06-314175.txt  rustc-ice-2025-05-26T10_23_06-314177.txt  rustfmt.toml  temp  test
crates/ordinator-actors/: Cargo.toml
crates/ordinator-actors/ordinator-actor-core/: Cargo.toml
crates/ordinator-actors/ordinator-actor-factories/: Cargo.toml
crates/ordinator-actors/ordinator-operational-actor/: Cargo.toml
crates/ordinator-actors/ordinator-strategic-actor/: Cargo.toml
crates/ordinator-actors/ordinator-supervisor-actor/: Cargo.toml
crates/ordinator-actors/ordinator-tactical-actor/: Cargo.toml
crates/ordinator-actors/src/: algorithm.rs  lib.rs
crates/ordinator-api-server/: Cargo.toml
crates/ordinator-api-server/src/: main.rs
crates/ordinator-configuration/: Cargo.toml
crates/ordinator-configuration/src/: actor-specifications.rs  actor_specifications.rs  lib.rs  material.rs  resources.rs  throttling.rs  throttling.rs.bak  time_input.rs  toml_baptiste.rs  toml_baptiste.rs.bak  user_interface.rs
crates/ordinator-imperium/: Cargo.toml
crates/ordinator-imperium/src/: main.rs
crates/ordinator-orchestrator/: Cargo.toml
crates/ordinator-orchestrator-actor-traits/: Cargo.toml
crates/ordinator-orchestrator-actor-traits/src/: delegate.rs  delegate.rs.bak  lib.rs  marginal_fitness.rs
crates/ordinator-orchestrator/src/: actor_factory.rs  actor_factory.rs.bak  actor_registry.rs  agent_factory.rs  agent_registry.rs  database.rs  lib.rs  logging.rs  model_initializers.rs
crates/ordinator-scheduling-environment/: Cargo.toml
crates/ordinator-scheduling-environment/src/: lib.rs  lib.rs.bak
crates/ordinator-total-data-processing/: Cargo.toml
crates/ordinator-total-data-processing/dlab_data_extract/: data_merge.ipynb
crates/ordinator-total-data-processing/src/: lib.rs.bak
data_processing/: Cargo.toml  json_to_output.py  sap_table_merging.py
data_processing/dlab_data_extract/: data_merge.ipynb
data_processing/dlab_data_extract/dlab/: pyvenv.cfg
data_processing/dlab_data_extract/test_data/: old-dan-f-from-brian.xlsx
data_processing/excel_dumps/: 2024-09-22 11:00:05.919594184 +00:00_ordinator_dump_for_asset_DF.xlsx  2024-09-22 11:19:01.676647531 +00:00_ordinator_dump_for_asset_DF.xlsx  2024-09-22 11:20:14.981720934 +00:00_ordinator_dump_for_asset_DF.xlsx  2024-09-22 11:53:34.377713357 +00:00_ordinator_dump_for_asset_DF.xlsx  ordinator_xlsx_dump_Instant { tv_sec: 17589, tv_nsec: 727870435 }_DF
data_processing/src/: afih.rs  afko.rs  afru.rs  afvc.rs  afvv.rs  aufk.rs  aufm.rs  iflot.rs  iflotx.rs  iloa.rs  lib.rs  t352r.rs  tj02.rs  tj02t.rs  tj20.rs  tj30.rs  tj30t.rs
data_processing/src/excel_dumps/: mod.rs
data_processing/src/sap_mapper_and_types/: afih.rs  afko.rs  afru.rs  afvc.rs  afvv.rs  aufk.rs  aufm.rs  iflot.rs  iflotx.rs  iloa.rs  mod.rs  tj02t.rs  tj20.rs  tj30.rs  tj30t.rs
data_processing/src/sources/: baptiste_csv_reader.rs  baptiste_csv_reader_merges.rs  excel.rs  excel_joins.rs  mod.rs
data_processing/test_data/: .~lock.export.XLSX#  export.XLSX  input-ordinator-hd-hb-2024-04-11.xlsx  test_to_illustrate.xlsx
data_processing/vide_tool/: main.py  sap_formatter.py
imperium/: Cargo.toml
imperium/configuration/: resources_df  resources_df.toml  resources_hb.toml  resources_hd.toml
imperium/json_responses/scheduler_requests/: get_number_of_workers.json
imperium/scripts/: initialize.sh  schedule_strategic_work_orders.sh  simulate_manual_scheduling_df.nu  simulate_user_strategic.nu
imperium/scripts/strategic/: simulate_resources_addition.nu  simulate_resources_subtraction.nu  simulate_scheduling_exclusion.nu  simulate_scheduling_inclusion.nu  simulate_weight_update.nu
imperium/src/: main.rs
imperium/src/commands/: mod.rs  operational.rs  orchestrator.rs  sap.rs  status.rs  strategic.rs  supervisor.rs  tactical.rs
scheduling_system/: .env  Cargo.toml  data_merge.ipynb:Zone.Identifier  docker-compose.override.yml  docker-compose.yml
scheduling_system/elk_config/elasticsearch_config/: elasticsearch.keystore
scheduling_system/elk_config/logstash_config/: logstash-sample.conf  pipelines.yml
scheduling_system/parameters/: example_crew.json  work_order_weight_parameters.json
scheduling_system/src/: main.rs
scheduling_system/src/agents/: inter_agent_initialization.rs  mod.rs  orchestrator.rs  orchestrator_agent.rs  traits.rs
scheduling_system/src/api/: mod.rs  orchestrator_agent.rs  orchestrator_api.rs  routes.rs  strategic_api.rs  websocket_agent.rs
scheduling_system/src/init/: agent_factory.rs  application_builder.rs  logging.rs  mod.rs  model_initializers.rs  ordinator_builder.rs
scheduling_system/src/models/: mod.rs
scheduling_system/test_data/: .~lock.input-ordinator-complete-2024-04-10.xlsx#  .~lock.input-ordinator-hd-hb-2024-04-11.xlsx#  export.csv  export_test.XLSX  input-ordinator-hd-hb-2024-04-11.csv
scheduling_system/tests/unit_testing/: frontend_scheduler.json
shared_types/: Cargo.toml
shared_types/parameters/: example_crew.json
shared_types/src/: agent_error.rs  lib.rs
shared_types/src/operational/: mod.rs  operational_request_scheduling.rs  operational_request_time.rs  operational_response_scheduling.rs  operational_response_status.rs  operational_response_time.rs
shared_types/src/orchestrator/: mod.rs
shared_types/src/scheduling_environment/: mod.rs
shared_types/src/strategic/: mod.rs  strategic_request_resources_message.rs  strategic_request_scheduling_message.rs  strategic_response_periods.rs  strategic_response_resources.rs  strategic_response_status.rs  strategic_status_message.rs
(+916 files in other folders)
