[workspace]
resolver = "2"
members = [
    "crates/ordinator-actors",
    "crates/ordinator-api-server",
    "crates/ordinator-configuration",
    "crates/ordinator-contracts",
    "crates/ordinator-imperium",
    "crates/ordinator-orchestrator",
    "crates/ordinator-scheduling-environment",
    "crates/ordinator-total-data-processing",
]

[profile.dev]
panic = 'abort'
force-frame-pointers = true
debug = true

[profile.release]
panic = 'abort'

[workspace.dependencies]
anyhow = "*"
arc-swap = "*" 
chrono = { version = "*", features = ["serde"] }
chrono-tz = "*"
colored = "*"
dotenvy = "*"
flume = "*"
itertools ="*"
rand = "*"
rgb = "*"
serde = { version = "*", features = ["derive"] } 
serde_json = "*"
toml = "*"

