[workspace]
resolver = "2"
members = [
    "crates/ordinator-actors/ordinator-actor-core",
    "crates/ordinator-actors/ordinator-operational-actor",
    "crates/ordinator-actors/ordinator-strategic-actor",
    "crates/ordinator-actors/ordinator-supervisor-actor",
    "crates/ordinator-actors/ordinator-tactical-actor",
    "crates/ordinator-api-server",
    "crates/ordinator-configuration",
    "crates/ordinator-contracts",
    "crates/ordinator-imperium",
    "crates/ordinator-orchestrator",
    "crates/ordinator-orchestrator-actor-traits",
    "crates/ordinator-scheduling-environment",
    "crates/ordinator-total-data-processing",
]

[profile.dev]
panic = 'abort'
force-frame-pointers = true
debug = true

[profile.release]
panic = 'abort'

[workspace.dependencies]
actix-files = "*"
actix-rt = "*"
actix-web = "*"
anyhow = "*"
arc-swap = "*" 
chrono = { version = "*", features = ["serde"] }
chrono-tz = "*"
colored = "*"
dotenvy = "*"
flume = "*"
itertools ="*"
proptest ="*"
rand = "*"
rgb = "*"
serde = { version = "*", features = ["derive"] } 
serde_json = "*"
tokio = "*"
toml = "*"
tracing = "*"
