[workspace]
resolver = "2"
members = [
    "crates/ordinator-actors/ordinator-actor-core",
    "crates/ordinator-actors/ordinator-operational-actor",
    "crates/ordinator-actors/ordinator-strategic-actor",
    "crates/ordinator-actors/ordinator-supervisor-actor",
    "crates/ordinator-actors/ordinator-tactical-actor",

    "crates/ordinator-api-server",
    "crates/ordinator-configuration",
    "crates/ordinator-contracts",
    # "crates/ordinator-imperium",
    "crates/ordinator-orchestrator",
    "crates/ordinator-orchestrator-actor-traits",
    "crates/ordinator-scheduling-environment",
    # TODO [ ]
    # Make `imperium` rely on `ordinator-api-server` and `ordinator-contracts`
    # "crates/ordinator-scheduling-environment-common",
    "crates/ordinator-total-data-processing",
]

[profile.dev]
panic = 'abort'
debug = true

[profile.release]
panic = 'abort'

[workspace.dependencies]
anyhow = "*"
arc-swap = "*" 
chrono = { version = "*", features = ["serde"] }
chrono-tz = "*"
clap = "*"
colored = "*"
dotenvy = "*"
flume = "*"
itertools ="*"
mockall = "*"
priority-queue = "*"
proptest ="*"
rand = "*"
rgb = "*"
serde = { version = "*", features = ["derive"] } 
serde_json = "*"
strum = "*"
tokio = {version ="*", features = [ "macros", "rt-multi-thread"]}
toml = "*"
tracing = "*"
tracing-appender = "*"
tracing-flame = "*"
tracing-subscriber ={version = "*", features = ["std", "fmt", "env-filter", "json"]} 
