[package]
name = "data_processing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atoi = "=1.0.0"
calamine = "*"
chrono = { version = "0", features = ["serde", "arbitrary"] }
shared_types = { path = "../shared_types" }
rust_decimal = "*"
polars = "*"
dotenv = "*"
regex = "*"
thiserror = "*"
tracing = "*"
xlsxwriter = "*"

