[package]
name = "data_processing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atoi = "=1.0.0"
calamine = "*"
chrono = { version = "0", features = ["serde", "arbitrary"] }
chrono-tz = "0.10.0"
csv = "*"
dotenvy = "*"
polars = "*"
regex = "*"
rust_decimal = "*"
rust_xlsxwriter = "*"
serde = { version = "*", features = [ "derive" ]}
shared_types = { path = "../shared_types" }
thiserror = "*"
tracing = "*"
