[package]
name = "imperium"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atoi = "=1.0.0"
shared_types = { path = "../shared_types" }
clap = { version = "*", features = ["derive"] }
url = "*"
serde_json = "*"
serde = { version = "*", features = ["derive"] }
strum = "*"
webbrowser = "*"
reqwest = { version = "*", features = ["blocking"] }
tokio = { version = "*", features = ["full"] }
tracing = "*"
toml = "*"
clap_complete = "*"
clap_complete_nushell = "*"
dotenvy = "*"
