[package]
name = "imperium"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atoi = "=1.0.0"
clap = { version = "*", features = ["derive"] }
clap_complete = "*"
clap_complete_nushell = "*"
dotenvy = "*"
reqwest = { version = "*", features = ["blocking"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
shared_types = { path = "../shared_types" }
strum = "*"
tokio = { version = "*", features = ["full"] }
toml = "*"
tracing = "*"
url = "*"
webbrowser = "*"
