[package]
name = "scheduling_system"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.5"

[dependencies]
# steel-core = { git="https://github.com/mattwparas/steel.git", branch = "master" }
# steel-repl = { git="https://github.com/mattwparas/steel.git", branch = "master" }
# steel-derive = { git="https://github.com/mattwparas/steel.git", branch = "master" }
atoi = "=1.0.0"
rust_decimal = "*"
shared_types = { path = "../shared_types" }
data_processing = { path = "../data_processing" }
chrono = { version = "*", features = ["serde"] }
chrono-tz = "*"
calamine = "*"
regex = "*"
actix-web = "*"
uuid = { version = "*", features = ["v4"] }
thiserror = "*"
actix-web-actors = "*"
actix-rt = "*"
actix = "*"
tokio = "*"
serde = { version = "*", features = ["derive"] } 
serde_json = "*"
priority-queue = "*"
tracing = "*"
tracing-subscriber = { version = "*", features = ["json", "env-filter"] }
tracing-appender = "*"
csv = "*"
rand = "*"
strum = "*"
strum_macros = "*"
tracing-flame = "*"
colored = "*"
dotenvy = "*"
serde_json_any_key = "*"
futures-util = "*"
bincode = "*"
futures = "*"
proptest = "*"
toml = "*"
