[package]
name = "scheduling_system"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
extensive_assertions = []

[dev-dependencies]
criterion = "0.5"

[dependencies]
actix = "*"
actix-rt = "*"
actix-web = "*"
actix-web-actors = "*"
anyhow = "*"
arc-swap ="*"
atomic_enum = "*"
bincode = "*"
calamine = "*"
chrono = { version = "*", features = ["serde"] }
chrono-tz = "*"
colored = "*"
csv = "*"
data_processing = { path = "../data_processing" }
dotenvy = "*"
futures = "*"
futures-util = "*"
itertools = "*"
priority-queue = "*"
proptest = "*"
rand = "*"
regex = "*"
rust_decimal = "*"
serde = { version = "*", features = ["derive"] } 
serde_json = "*"
serde_json_any_key = "*"
shared_types = { path = "../shared_types" }
strum = "*"
strum_macros = "*"
thiserror = "*"
tokio = "*"
toml = "*"
tracing = "*"
tracing-appender = "*"
tracing-flame = "*"
tracing-subscriber = { version = "*", features = ["json", "env-filter"] }
uuid = { version = "*", features = ["v4"] }
