[package]
name = "shared_types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0"
steel-derive = { git="https://github.com/mattwparas/steel.git", branch = "master" }
steel-core = { git="https://github.com/mattwparas/steel.git", branch = "master" }
serde = { version = "1", features = ["derive"] }
actix = "0"
fixed = "1.27"
serde_json = "1"
strum = "0"
strum_macros = "0"
chrono = { version = "0", features = ["serde", "arbitrary"] }
chrono-tz = "0"
regex = "1"
clap = { version = "4", features = ["derive"] }
serde_json_any_key = "2"
toml = "0.8"
proptest = "1"
thiserror = "1"
