[package]
name = "shared_types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atoi = "=1.0.0"
tracing = "*"
serde = { version = "*", features = ["derive"] }
actix = "*"
rust_decimal = "*"
rust_decimal_macros = "*"
serde_json = "*"
strum = "*"
strum_macros = "*"
chrono = { version = "*", features = ["serde", "arbitrary"] }
chrono-tz = "*"
regex = "*"
clap = { version = "*", features = ["derive"] }
serde_json_any_key = "*"
toml = "*"
proptest = "*"
thiserror = "*"
