[package]
name = "ordinator-actors"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true}
arc-swap = {workspace = true}
colored = {workspace = true}
itertools = {workspace = true}
serde = {workspace = true}
ordinator-configuration ={ path = "../ordinator-configuration" }
ordinator-scheduling-environment ={ path = "../ordinator-scheduling-environment"}
