[package]
name = "ordinator-api-server"
version = "0.1.0"
edition = "2024"


[dependencies]
ordinator-orchestrator = { path = "../ordinator-orchestrator" }

axum = {version = "*", features = ["macros", "tokio"]}
axum-server = "*"
tower = "*"
tower-http = { version = "*", features = ["fs"]}
# actix-files = { workspace = true}
# actix-rt = { workspace = true }
# actix-web = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
dotenvy = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde_json = {workspace = true}

# [target.'cfg(not(target_env = "msvc"))'.dependencies]
# tikv-jemallocator = {version = "0.6"}
