[package]
name = "ordinator-orchestrator-actor-traits"
version = "0.1.0"
edition = "2024"

[dependencies]
ordinator-scheduling-environment ={ path = "../ordinator-scheduling-environment"}
ordinator-configuration = {path = "../ordinator-configuration"}

anyhow = {workspace = true}
arc-swap = {workspace = true}
chrono.workspace = true
flume = {workspace = true}
thiserror.workspace = true

