[package]
name = "ordinator-orchestrator"
version = "0.1.0"
edition = "2024"

[dependencies]
ordinator-actor-core = { path = "../ordinator-actors/ordinator-actor-core" }
ordinator-contracts = { path = "../ordinator-contracts" }
ordinator-orchestrator-actor-traits = {path = "../ordinator-orchestrator-actor-traits"}
ordinator-scheduling-environment = { path = "../ordinator-scheduling-environment" }
anyhow = { workspace = true }

