[package]
name = "data_processing"
version = "0.2.2"
edition = "2024"
description = "Data processing crate for interacting with SAP"
license-file = "../LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ordinator-configuration = {path = "../ordinator-configuration"}
ordinator-scheduling-environment = { path = "../ordinator-scheduling-environment" }
anyhow = "*"
atoi = "=1.0.0"
calamine = "*"
chrono = { version = "0", features = ["serde", "arbitrary"] }
chrono-tz = "0.10.0"
csv = "*"
dotenvy = "*"
rayon = "*"
regex = "*"
rust_decimal = "*"
rust_xlsxwriter = "*"
serde = { version = "*", features = [ "derive" ]}
thiserror = "*"
toml = "*"
tracing = "*"
