[package]
name = "data_processing"
version = "0.2.2"
edition = "2024"
description = "Data processing crate for interacting with SAP"
license-file = "../LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ordinator-configuration = {path = "../ordinator-configuration"}
ordinator-scheduling-environment = { path = "../ordinator-scheduling-environment" }
ordinator-orchestrator-actor-traits = { path = "../ordinator-orchestrator-actor-traits"}

anyhow = "*"
arc-swap = {workspace = true} 
calamine = "*"
chrono = { version = "0", features = ["serde", "arbitrary"] }
chrono-tz = "0.10.0"
csv = "*"
rayon = "*"
regex = "*"
rust_decimal = "*"
rust_xlsxwriter = "*"
serde = { version = "*", features = [ "derive" ]}
thiserror = "*"
toml = "*"
tracing = "*"
