[package]
name = "ordinator-actor-core"
version = "0.1.0"
edition = "2024"

[dependencies]
ordinator-configuration ={ path = "../../ordinator-configuration" }
ordinator-orchestrator-actor-traits = {path = "../../ordinator-orchestrator-actor-traits"}
ordinator-scheduling-environment ={ path = "../../ordinator-scheduling-environment"}

anyhow = { workspace = true}
arc-swap = {workspace = true}
colored = {workspace = true}
chrono = {workspace = true}

flume = {workspace = true}
itertools = {workspace = true}
proptest = {workspace = true}
rand = {workspace = true}
serde = {workspace = true}
tracing = {workspace = true}
