[package]
name = "ordinator-actor-factories"
version = "0.1.0"
edition = "2024"

[dependencies]
ordinator-orchestrator-actor-traits = {path = "../../ordinator-orchestrator-actor-traits"}
ordinator-actor-core = {path = "../ordinator-actor-core"}
ordinator-scheduling-environment = {path = "../../ordinator-scheduling-environment"}
