[package]
name = "ordinator-supervisor-actor"
version = "0.1.0"
edition = "2024"

[dependencies]
ordinator-actor-core = {path = "../ordinator-actor-core"}
ordinator-orchestrator-actor-traits = {path = "../../ordinator-orchestrator-actor-traits"}
ordinator-scheduling-environment = {path = "../../ordinator-scheduling-environment"}
ordinator-configuration = {path = "../../ordinator-configuration"}

anyhow = { workspace = true}
arc-swap = {workspace = true}
colored = {workspace = true}
chrono = {workspace = true}
itertools = {workspace = true}
proptest = {workspace = true}
rand = {workspace = true}
serde = {workspace = true}
tracing = {workspace = true}

